Add storybook schematics

--- a/Source/Quartzmin.RestApi/ClientApp/angular.json
+++ b/Source/Quartzmin.RestApi/ClientApp/angular.json
@@ -138,5 +138,8 @@
       }
     }
   },
-  "defaultProject": "quartzmin-spa"
+  "defaultProject": "quartzmin-spa",
+  "cli": {
+    "defaultCollection": "ngx-schematics-for-storybook"
+  }
 }
