--- a/Source/Quartzmin.RestApi/ClientApp/package.json
+++ b/Source/Quartzmin.RestApi/ClientApp/package.json
@@ -40,6 +40,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.6",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
@@ -49,6 +50,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ngx-schematics-for-storybook": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
