Postgres jobstore added; .net core 3.1 update

--- a/Source/Quartz.Plugins.RecentHistory/Quartz.Plugins.RecentHistory.csproj
+++ b/Source/Quartz.Plugins.RecentHistory/Quartz.Plugins.RecentHistory.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net48</TargetFrameworks>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <PackageReference Include="Quartz" Version="3.0.7" />
+    <PackageReference Include="Npgsql" Version="4.1.6" />
   </ItemGroup>
 
   <ItemGroup>
