Batch command job added.

--- a/Source/Quartz.Plugins.RecentHistory/Quartz.Plugins.RecentHistory.csproj
+++ b/Source/Quartz.Plugins.RecentHistory/Quartz.Plugins.RecentHistory.csproj
@@ -28,8 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Quartz" Version="3.0.7" />
+    <PackageReference Include="Quartz" Version="3.2.3" />
     <PackageReference Include="Npgsql" Version="4.1.6" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
