--- a/Source/Quartz.Plugins.RecentHistory.Tests.Integration/Quartz.Plugins.RecentHistory.Tests.Integration.csproj
+++ b/Source/Quartz.Plugins.RecentHistory.Tests.Integration/Quartz.Plugins.RecentHistory.Tests.Integration.csproj
@@ -9,7 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
-    <PackageReference Include="Quartz" Version="3.0.7" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Quartz" Version="3.2.3" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
